--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="catalogo">
       <h2>Catálogo em destaque</h2>
       <ul>
-        <li> <img src="img/fotosintezi.jpg" alt="filme1"> Título 1</li>
+        <li>Título 1</li>
         <li>Título 2</li>
         <li>Título 3</li>
         <li>Título 4</li>
