--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <section class="faq">
       <h2>Perguntas Frequentes</h2>
-      <h3>O que é a Netflix?</h3>
+      <h3>O que é a Wormflix?</h3>
       <p>Um serviço de streaming com vários títulos para assistir.</p>
       <h3>Quanto custa?</h3>
       <p>Planos a partir de R$ 19,90 por mês.</p>
@@ -66,3 +66,4 @@
   </footer>
 </body>
 </html>
+
