--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </main>
 
   <footer>
-    <p> &copy; 2025 Stream </p>
+    <p> &copy; 2025 Wormflix </p>
     <nav>
       <a href="#">Perguntas frequentes</a> |
       <a href="#">Ajuda</a>
@@ -66,4 +66,5 @@
   </footer>
 </body>
 </html>
+
 
