--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <label for="email">Seu e-mail:</label>
         <input type="email" id="email" name="email" required />
         <button type="submit">Começar</button>
-        <img src="img/fotosintezi.jpg" alt="catalogo">
       </form>
     </section>
  
@@ -38,11 +37,34 @@
 
     <section class="catalogo">
       <h2>Catálogo em destaque</h2>
-      <ul>
-        <li>Título 1</li>
-        <li>Título 2</li>
-        <li>Título 3</li>
-        <li>Título 4</li>
+      <ul class="lista">
+        <li>
+          <div class="img">
+            <img src="img/dexter.jpg" alt="Dexter">
+          </div>
+        <p>Dexter</p>  
+        </li>
+
+        <li>
+          <div class="img">
+          <img src="img/arcane.webp"alt="Arcane">
+        </div>
+        <p>Arcane</p>
+        </li>
+        
+        <li>
+          <div class="img">
+            <img src="img/bad.webp" alt="Breaking Bad">
+          </div>
+          <p>Breaking Bad</p>
+        </li>
+
+        <li>
+          <div class="img">
+            <img src="img/Round.jpeg" alt="Round 6">
+            </div>
+            <p>Round 6</p>
+          </li>
       </ul>
     </section>
 
@@ -66,5 +88,4 @@
   </footer>
 </body>
 </html>
-
 
